--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@n8n/chat": "^1.5.1",
     "@tailwindcss/vite": "^4.1.18",
     "axios": "^1.13.2",
     "lucide": "^0.562.0",
